working response